--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "package.json",
   "version": "1.0.0",
   "description": "test for EWS",
-  "main": "database.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "repository": {
